@@ -233,7 +233,8 @@ my @variable_string_settables = (
   'TEXI2HTML', 'IMAGE_LINK_PREFIX', 'FIX_TEXINFO',
   'TREE_TRANSFORMATIONS', 'BASEFILENAME_LENGTH',
   'TEXTCONTENT_COMMENT', 'XREF_USE_FLOAT_LABEL', 'XREF_USE_NODE_NAME_ARG',
-  'MACRO_BODY_IGNORES_LEADING_SPACE', 'CHECK_HTMLXREF'
+  'MACRO_BODY_IGNORES_LEADING_SPACE', 'CHECK_HTMLXREF',
+  'TEXINFO_DTD_VERSION',
 );
 # Not strings. 
 # FIXME To be documented somewhere, but where?
